Add fund methods: nav, historicalData, allocationMap, allocationWeighting; handle nav params in fetch

--- a/methods_config.json
+++ b/methods_config.json
@@ -1,5 +1,9 @@
 {
   "fund_methods": [
+    "nav",
+    "historicalData",
+    "allocationMap",
+    "allocationWeighting",
     "feeLevel",
     "holdings",
     "taxes",
