Prune fund methods per app usage; keep future-use: allocationMap, allocationWeighting, marketCapitalization, regionalSectorIncludeCountries, sector

--- a/methods_config.json
+++ b/methods_config.json
@@ -4,35 +4,16 @@
     "historicalData",
     "allocationMap",
     "allocationWeighting",
-    "feeLevel",
-    "holdings",
-    "taxes",
-    "graphData",
-    "financialMetrics",
-    "fixedIncomeStyle",
     "marketCapitalization",
-    "maturitySchedule",
-    "maxDrawDown",
-    "morningstarAnalyst",
-    "multiLevelFixedIncomeData",
-    "otherFee",
-    "parentMstarRating",
-    "parentSummary",
-    "people",
-    "position",
-    "productInvolvement",
-    "proxyVotingManagement",
-    "proxyVotingShareHolder",
-    "regionalSector",
     "regionalSectorIncludeCountries",
+    "sector",
+    "holdings",
+    "graphData",
+    "otherFee",
+    "position",
     "riskReturnScatterplot",
     "riskReturnSummary",
-    "riskVolatility",
-    "salesFees",
-    "sector",
-    "starRatingFundAsc",
-    "starRatingFundDesc",
-    "trailingReturn"
+    "riskVolatility"
   ],
   "stock_methods": [
     "overview",
